# solana-geyser-plugin-nats

./: Cargo.toml  README.md  config.json
.github/workflows/: build-and-release.yml
docker/: docker-compose.yml  run-test.sh
docker/configs/: geyser-plugin-config.json
docker/dockerfiles/: Dockerfile.consumer  Dockerfile.submitter  Dockerfile.validator
src/: config.rs  connection.rs  geyser_plugin_nats.rs  lib.rs  processor.rs  serializer.rs  transaction_selector.rs
tests/: connection_tests.rs  geyser_plugin_tests.rs  integration_tests.rs  processor_tests.rs  serializer_tests.rs  test_helpers.rs  transaction_selector_tests.rs
