[package]
authors = ["Aurimas Narkevicius <auris.narkus@gmail.com>"]
edition = "2021"
name = "solana-geyser-plugin-nats"
description = "The Solana Geyser plugin for NATS"
version = "2.2.15"
repository = "https://github.com/evodevo/solana-geyser-plugin-nats"
license = "AGPL-3"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0"
agave-geyser-plugin-interface = "=2.2.18"
solana-logger = "=2.3.1"
solana-measure = "=2.2.18"
solana-metrics = "=2.2.18"
solana-runtime = "=2.2.18"
solana-sdk = "=2.2.2"
solana-transaction-status = "=2.2.18"
thiserror = "1.0"
crossbeam-channel = "0.5.7"
async-nats = "0.30"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
tempfile = "3.8.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
